--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^19.1.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.2",
+    "react-transition-group": "^4.4.5",
     "reselect": "^5.1.1"
   },
   "devDependencies": {
